objects/Account.object
<CustomObject>
    <fields>
        <fullName>AvaAcctSeed__Ac_Shipping_Address_Longitude__c</fullName>
        <description>Shipping Address Longitude field on Accounts page</description>
        <inlineHelpText>Longitude details for Avalara Tax Calculation.</inlineHelpText>
        <label>Shipping Address Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Exempt_EntityType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Type of Exemption, if any, assocaited with this Account.  Optional Field.</inlineHelpText>
        <label>Exempt EntityType</label>
        <referenceTo>AvaAcctSeed__EntityUse__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Exemption_Number__c</fullName>
        <description>Avalara Exemption Number</description>
        <inlineHelpText>Avalara Exemption Number</inlineHelpText>
        <label>Exemption Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__VAT_No__c</fullName>
        <inlineHelpText>Buyer&apos;s VAT No</inlineHelpText>
        <label>VAT No</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Project_Manager_Rating__c</fullName>
        <formula>If (  Count_of_Project_Manager_Ratings__c  &gt; 0 ,
       Text ( Round ( Sum_of_Project_Manager_Ratings__c  / Count_of_Project_Manager_Ratings__c    , 2)  ) , &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average of the Project Manager Ratings from the Project Partner section</inlineHelpText>
        <label>Average Project Manager Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Site_Supervisor_Rating__c</fullName>
        <formula>If (   Count_of_Site_Supervisor_Ratings__c   &gt; 0 ,
       Text ( Round (  Sum_of_Site_Supervisor_Ratings__c   / Count_of_Site_Supervisor_Ratings__c   , 2 ) ) , &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average of the Site Super ratings from the Project Partners section</inlineHelpText>
        <label>Average Site Superintendent Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Eligibility_Expiration_Date__c</fullName>
        <description>to track when our eligibility expires so that we can get ahead of this and make sure we are eligible when we expect an RFP to be released</description>
        <inlineHelpText>should be date of when our eligibility expires</inlineHelpText>
        <label>Bid Eligibility Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrego_Contractor_License_Expiration__c</fullName>
        <label>Borrego Contractor License Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borrego_Contractor_License_Holder__c</fullName>
        <label>Borrego Contractor License Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrego_Contractor_License_Number__c</fullName>
        <label>Borrego Contractor License Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>Which branch office will be handling account</description>
        <inlineHelpText>The Branch office where the account is located. For accounts working with the entire organization, enter &quot;Corporate&quot;</inlineHelpText>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>Oakland</fullName>
                </value>
                <value>
                    <fullName>Orange County</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>Silicon Valley</fullName>
                </value>
                <value>
                    <fullName>Sonoma County</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Code_Rev__c</fullName>
        <label>Building Code Rev</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2007 California Building Code</fullName>
                </value>
                <value>
                    <fullName>Massachusetts State Building Code</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_License_Cost__c</fullName>
        <description>This is the price of the business license</description>
        <label>Business License Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_License_Expire_Date__c</fullName>
        <label>Business License Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_License_Filing_Date__c</fullName>
        <description>Date business license expires</description>
        <label>Business License Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_License__c</fullName>
        <description>This is the city/county business license #</description>
        <label>Business License #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Tax_Structure_Notes__c</fullName>
        <description>Only visible to accounting profiles.</description>
        <inlineHelpText>Use this field for notes regarding the business tax structure.</inlineHelpText>
        <label>Business Tax Structure Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Tax_Structure__c</fullName>
        <label>Business Tax Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Borrego Internal Use</fullName>
                </value>
                <value>
                    <fullName>C-Corporation</fullName>
                </value>
                <value>
                    <fullName>Credit Card only Vendor</fullName>
                </value>
                <value>
                    <fullName>Employee/Former Employee</fullName>
                </value>
                <value>
                    <fullName>Individual/Sole Proprietor</fullName>
                </value>
                <value>
                    <fullName>LLC- C-Corp</fullName>
                </value>
                <value>
                    <fullName>LLC-Disregarded Entity</fullName>
                </value>
                <value>
                    <fullName>LLC-Partnership</fullName>
                </value>
                <value>
                    <fullName>LLC S-Corp</fullName>
                </value>
                <value>
                    <fullName>Muncipality/Government</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>S-Corporation</fullName>
                </value>
                <value>
                    <fullName>Trust/Estate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COD__c</fullName>
        <inlineHelpText>commercial operation date:   allow us to track the age of each installation so measure which are coming to the close of their 5 or 10 year</inlineHelpText>
        <label>COD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRSM_Score__c</fullName>
        <inlineHelpText>Credit risk score, 0-100, with 100 being lowest risk.</inlineHelpText>
        <label>CRSM Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CalFire_Guidlines__c</fullName>
        <label>CalFire Guidlines</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enforced</fullName>
                </value>
                <value>
                    <fullName>Not Enforced</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Opportunities__c</fullName>
        <description>USED WITH ROLLUP HELPER</description>
        <inlineHelpText>lists any campaigns associated with related opportunities</inlineHelpText>
        <label>Campaign Opportunities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Congressional_District__c</fullName>
        <description>Fill in the district which will be used by the Policy team for potential advocacy efforts</description>
        <inlineHelpText>Fill in the district which will be used by the Policy team for potential advocacy efforts</inlineHelpText>
        <label>Congressional District</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA-01</fullName>
                </value>
                <value>
                    <fullName>CA-02</fullName>
                </value>
                <value>
                    <fullName>CA-03</fullName>
                </value>
                <value>
                    <fullName>CA-04</fullName>
                </value>
                <value>
                    <fullName>CA-05</fullName>
                </value>
                <value>
                    <fullName>CA-06</fullName>
                </value>
                <value>
                    <fullName>CA-07</fullName>
                </value>
                <value>
                    <fullName>CA-08</fullName>
                </value>
                <value>
                    <fullName>CA-09</fullName>
                </value>
                <value>
                    <fullName>CA-10</fullName>
                </value>
                <value>
                    <fullName>CA-11</fullName>
                </value>
                <value>
                    <fullName>CA-12</fullName>
                </value>
                <value>
                    <fullName>CA-13</fullName>
                </value>
                <value>
                    <fullName>CA-14</fullName>
                </value>
                <value>
                    <fullName>CA-15</fullName>
                </value>
                <value>
                    <fullName>CA-16</fullName>
                </value>
                <value>
                    <fullName>CA-17</fullName>
                </value>
                <value>
                    <fullName>CA-18</fullName>
                </value>
                <value>
                    <fullName>CA-19</fullName>
                </value>
                <value>
                    <fullName>CA-20</fullName>
                </value>
                <value>
                    <fullName>CA-21</fullName>
                </value>
                <value>
                    <fullName>CA-22</fullName>
                </value>
                <value>
                    <fullName>CA-23</fullName>
                </value>
                <value>
                    <fullName>CA-24</fullName>
                </value>
                <value>
                    <fullName>CA-25</fullName>
                </value>
                <value>
                    <fullName>CA-26</fullName>
                </value>
                <value>
                    <fullName>CA-27</fullName>
                </value>
                <value>
                    <fullName>CA-28</fullName>
                </value>
                <value>
                    <fullName>CA-29</fullName>
                </value>
                <value>
                    <fullName>CA-30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractor_License_N__c</fullName>
        <inlineHelpText>Subcontractors State Contractors License</inlineHelpText>
        <label>Contractor License #</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractors_License_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractors License Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Convert_Account_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to control &quot;accounting active&quot; vendor accounts and the ability to create requisitions. Also to prevent using them without the correct documentation on file.</description>
        <inlineHelpText>Check this box if you are converting a Customer Account to a Vendor Account. This will uncheck the accounting active checkbox.</inlineHelpText>
        <label>Convert Account Type?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Project_Manager_Ratings__c</fullName>
        <description>Roll-up Summary field that tallies the total number of Ratings this Project Partner has received from Project Managers</description>
        <label>Count of Project Manager Ratings</label>
        <summaryFilterItems>
            <field>ProjectPartner__c.Project_Manager_Rating__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectPartner__c.AccountId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Site_Supervisor_Ratings__c</fullName>
        <description>Total number of Ratings this Project Partner has received from Site Supervisors</description>
        <label>Count of Site Supervisor Ratings</label>
        <summaryFilterItems>
            <field>ProjectPartner__c.Site_Supervisor_Rating__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectPartner__c.AccountId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit_Assessment_Notes__c</fullName>
        <inlineHelpText>Analysis qualitative notes regarding the credit assessment.</inlineHelpText>
        <label>Credit Assessment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Outlook__c</fullName>
        <inlineHelpText>Official credit outlook of the public ratings agency, usually denoted as Positive, Stable, or Negative</inlineHelpText>
        <label>Credit Outlook</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <inlineHelpText>Official credit rating from public ratings agency.</inlineHelpText>
        <label>Credit Rating</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_O_M_Provider_1__c</fullName>
        <label>Current O&amp;M Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Current_O_M_Providers</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_O_M_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>not in use, updated to multi-select piclist</description>
        <label>Current O&amp;M Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts O &amp; M</relationshipLabel>
        <relationshipName>OM_Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_user_email__c</fullName>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current user email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <description>Any feedback obtained during customer closeout.</description>
        <label>Customer Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Signed_R2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Signed R2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DIRExpirationDate__c</fullName>
        <description>date the DIR# expires, required for public work subcontractors</description>
        <inlineHelpText>date the DIR# expires</inlineHelpText>
        <label>DIR# Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DIR_Number__c</fullName>
        <inlineHelpText>Subcontractors State Contractors License #</inlineHelpText>
        <label>DIR Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo.</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Inspection_Passed__c</fullName>
        <description>Date city inspection was passed</description>
        <label>Date Inspection Passed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Assessment__c</fullName>
        <inlineHelpText>Date of Borrego internal credit assessment, valid for 1 year.</inlineHelpText>
        <label>Date Of Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Passed_Utility_Inspection__c</fullName>
        <description>Date the system has passed utility inspection. Will also be date of warranty start and start of production monitoring.</description>
        <label>Date Passed Utility Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Payment_Request__c</fullName>
        <description>Date that R2 or equivalen payment request is submitted to apropriate agency</description>
        <label>Date Payment Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rebate_Recieved__c</fullName>
        <description>Date that rebate payment was recieved by Borrego Solar or customer</description>
        <label>Date Rebate Recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Reservation_Submitted__c</fullName>
        <description>The date the R1 or equvialent paperwork was submitted.</description>
        <label>Date Reservation Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Account_Ownership_Change__c</fullName>
        <inlineHelpText>date stamps date account owner field is changed</inlineHelpText>
        <label>Date of Account Ownership Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Rating__c</fullName>
        <inlineHelpText>Date of most recent public credit opinion.</inlineHelpText>
        <label>Date of Rating</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateofLastOMContact__c</fullName>
        <description>rollup of the date of the last activity done by O&amp;M profile user - used in conjunction with Roll UP helper</description>
        <inlineHelpText>rollup of the date of the last activity done by O&amp;M profile user</inlineHelpText>
        <label>Date of Last O&amp;M Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Most_Recent_Call_Activity__c</fullName>
        <formula>TODAY() - Most_Recent_Contact_Call_Activity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates # of days between today and most recently contact call activity</inlineHelpText>
        <label>Days Since Most Recent Call Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_Ownership_Assgnt_Activit__c</fullName>
        <formula>Most_Recent_Contact_Call_Activity__c - Date_of_Account_Ownership_Change__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates # of days between when it was reassigned and date of most recent call activity to any of the related contacts</inlineHelpText>
        <label>Days between Ownership Assgnt &amp; Activit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_w_o_Activity__c</fullName>
        <description>NOT CURRENTLY IN USE, not visible to anyone but ADMIN - storing for reference</description>
        <formula>IF( 
ISBLANK(Date_of_Account_Ownership_Change__c) &amp;&amp; ISBLANK(Most_Recent_Contact_Call_Activity__c), TODAY() - DATE(2016, 01, 01),

IF(
ISBLANK(Date_of_Account_Ownership_Change__c)&amp;&amp; (Most_Recent_Contact_Call_Activity__c &lt; DATE(2016, 01, 01)),TODAY() - DATE(2016, 01, 01) ,

IF(
ISBLANK(Date_of_Account_Ownership_Change__c)&amp;&amp; (Most_Recent_Contact_Call_Activity__c &gt; DATE(2016, 01, 01)),Most_Recent_Contact_Call_Activity__c - DATE(2016, 01, 01), 

IF(
ISBLANK(Most_Recent_Contact_Call_Activity__c),  TODAY() - Date_of_Account_Ownership_Change__c,
 
IF
(Most_Recent_Contact_Call_Activity__c &lt; Date_of_Account_Ownership_Change__c, TODAY() - Date_of_Account_Ownership_Change__c,

(Most_Recent_Contact_Call_Activity__c - Date_of_Account_Ownership_Change__c)
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Date of Account Ownership is blank, calculates # of Days between Most Recent Call Activity Date and 01/01/2016, If Most Recent Call Activity is Blank, calculates # days between today and 01/01/2016, or days between ownership change - most recent call</inlineHelpText>
        <label>Days w/o Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Counts the number of Address records where the Default Address checkbox is checked. Ensures that only one address is marked as such.</description>
        <label>Default Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default Branch for non-Project related costs</inlineHelpText>
        <label>Default Branch</label>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Invoice_Type__c</fullName>
        <description>Account default invoice type determine the Invoice Type on the AP Invoice</description>
        <inlineHelpText>The default type used for AP Invoices</inlineHelpText>
        <label>Default Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development &amp; Engineering</fullName>
                </value>
                <value>
                    <fullName>G&amp;A</fullName>
                </value>
                <value>
                    <fullName>Internal Reclass</fullName>
                </value>
                <value>
                    <fullName>Misc. Job Costs</fullName>
                </value>
                <value>
                    <fullName>O&amp;M</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Solar Modules</fullName>
                </value>
                <value>
                    <fullName>Subcontractor</fullName>
                </value>
                <value>
                    <fullName>Material (non-module, major/minor)</fullName>
                </value>
                <value>
                    <fullName>Material (material only)</fullName>
                    <isActive>false</isActive>
                    <label>Material (material only)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Development_Type__c</fullName>
        <label>Development Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Strategic BD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disqualification_category__c</fullName>
        <label>Disqualification category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>At solar capacity</fullName>
                </value>
                <value>
                    <fullName>Bad site</fullName>
                </value>
                <value>
                    <fullName>Financing issues/awaiting funding</fullName>
                </value>
                <value>
                    <fullName>Inadequate load</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Site too small</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disqualification_specific__c</fullName>
        <label>Disqualification specific</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DragDrop_CaAnalogy_Important__c</fullName>
        <description>Dont Delete this field. Important For DRAG n DROP FEATURE.</description>
        <label>Drag n Drop Important Field</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPC_Active_Opportunities__c</fullName>
        <description>used in conjunction with WF on contact to check with whether contact is tied to an account that already has an Active Opportunity.</description>
        <inlineHelpText>counts # of EPC opportunities that have close dates in the future and are in stages Prospecting - Booked</inlineHelpText>
        <label>EPC Active Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>WDG Opportunity, O&amp;M Opportunity</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterThan</operation>
            <value>1/1/2016</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Qualified, LOI Signed, Option Lease Executed, Proposal Submitted, Shortlisted/Interviews, Project Awarded, Project Booked, EPC Signed, Prospecting</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EPC_Opportunity_Stage__c</fullName>
        <inlineHelpText>counts # of Opportunity WINS since 01/01/2015</inlineHelpText>
        <label>EPC Opportunity WINS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electric_Code__c</fullName>
        <label>Electric Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2005 NEC</fullName>
                </value>
                <value>
                    <fullName>2008 NEC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>